syntax = "proto3";
package event_log;

option go_package = "/mtn_proto";
option java_package = "com.meta_node.protos.compiled.event_log";

message EventLog {
   bytes TransactionHash = 2; 
   bytes Address = 3;
   bytes Data = 4; 
   repeated bytes Topics = 5;
}

message EventLogsHashData {
  repeated bytes Hashes = 1;
}

message EventLogs{
    repeated EventLog EventLogs = 1;
}
